# stylos

./: .gitignore  Cargo.toml  README.md
crates/stylos/: Cargo.toml
crates/stylos/src/: config.rs  error.rs  identity.rs  lib.rs  session.rs  transport.rs
docs/: README.md  addressing.md  architecture.md  case-study-themion-implemented-stylos-integration.md  cross-lang.md  discovery.md  origin.md  poc.md
docs/prd/: prd-001-consolidate-stylos-workspace-into-one-primary-crate.md
