[workspace]
members = [
    "stylos-common",
    "stylos-identity",
    "stylos-config",
    "stylos-transport",
    "stylos-session",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
zenoh = "=1.9.0"

[workspace.package]
version = "0.1.0"
edition = "2021"
